--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <title>Sample Deployment</title>
   <style>
     body {
-      color: #ffffff;
-      background-color: #007f3f;
+      color: #120101;
+      background-color: #e7f1ec;
       font-family: Arial, sans-serif;
       font-size: 14px;
     }
     
     h1 {
-      font-size: 500%;
+      font-size: 350%;
       font-weight: normal;
       margin-bottom: 0;
     }
@@ -27,7 +27,7 @@
 <body>
   <div align="center">
     <h1>Congratulations!</h1>
-    <h2>You have successfully created a pipeline that retrieved this source application from an Amazon S3 bucket and deployed it 
+    <h2>I am F018473-Subiksha and I have successfully created a pipeline that retrieved this source application from an Amazon S3 bucket and deployed it 
 	to three Amazon EC2 instances using AWS CodeDeploy.</h2>
     <p>For next steps, read the AWS CodePipeline Documentation.</p>
   </div>
