--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <style>
     body {
       color: #120101;
-      background-color: #e7f1ec;
       font-family: Arial, sans-serif;
       font-size: 14px;
     }
@@ -24,10 +23,10 @@
     }
   </style>
 </head>
-<body>
+<body style="background-color:powderblue;">
   <div align="center">
     <h1>Congratulations!</h1>
-    <h2>I am F018473-Subiksha. This is a new update and I have successfully created a pipeline that retrieved this source application from an Amazon S3 bucket and deployed it 
+    <h2>I am F018473-Subiksha Palani. This is a new update and I have successfully created a pipeline that retrieved this source application from an Amazon S3 bucket and deployed it 
 	to three Amazon EC2 instances using AWS CodeDeploy.</h2>
     <p>For next steps, read the AWS CodePipeline Documentation.</p>
   </div>
