--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body style="background-color:powderblue;">
   <div align="center">
     <h1>Congratulations!</h1>
-    <h2>I am F018473-Subiksha Palani. This is a new update and I have successfully created a pipeline that retrieved this source application from an Amazon S3 bucket and deployed it 
+    <h2>Hi I am F018473-Subiksha Palani. This is a new update and I have successfully created a pipeline that retrieved this source application from an Amazon S3 bucket and deployed it 
 	to three Amazon EC2 instances using AWS CodeDeploy.</h2>
     <p>For next steps, read the AWS CodePipeline Documentation.</p>
   </div>
