--- a/index.html
+++ b/index.html
@@ -1,35 +1,91 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>Sample Deployment</title>
-  <style>
-    body {
-      color: #120101;
-      font-family: Arial, sans-serif;
-      font-size: 14px;
-    }
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Interactive Resume - HTML Only</title>
+  </head>
+  <body bgcolor="#E6E6FA">
     
-    h1 {
-      font-size: 350%;
-      font-weight: normal;
-      margin-bottom: 0;
-    }
-    
-    h2 {
-      font-size: 200%;
-      font-weight: normal;
-      margin-bottom: 0;
-    }
-  </style>
-</head>
-<body style="background-color:powderblue;">
-  <div align="center">
-    <h1>Congratulations!</h1>
-    <h2>Hi I am F018473-Subiksha Palani. This is a new update and I have successfully created a pipeline that retrieved this source application from an Amazon S3 bucket and deployed it 
-	to three Amazon EC2 instances using AWS CodeDeploy.</h2>
-    <p>For next steps, read the AWS CodePipeline Documentation.</p>
-  </div>
-</body>
+
+    <h1 align="center">John Doe</h1>
+    <h3 align="center">Web Developer | Designer | Freelancer</h3>
+    <p align="center">
+      📍 New York, USA | 📧 johndoe@email.com | ☎ +123 456 7890
+    </p>
+    <hr />
+
+    <h2>📌 About Me</h2>
+    <p>
+      Passionate web developer with 5+ years of experience in building dynamic
+      websites and applications. Skilled in HTML, JavaScript, and UI/UX design.
+    </p>
+
+    <h2>📌 Interactive Sections</h2>
+    <p>Click a section below to view details:</p>
+
+    <ul>
+      <li><a href="#experience">Work Experience</a></li>
+      <li><a href="#education">Education</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+
+    <hr />
+
+    <h2 id="experience">💼 Work Experience</h2>
+    <ul>
+      <li><b>Senior Web Developer</b> - TechCorp (2020 - Present)</li>
+      <li><b>Frontend Developer</b> - WebDesign Inc. (2017 - 2020)</li>
+      <li><b>Intern Developer</b> - Startup Hub (2016 - 2017)</li>
+    </ul>
+
+    <hr />
+
+    <h2 id="education">🎓 Education</h2>
+    <ul>
+      <li>
+        <b>Bachelor's in Computer Science</b> - XYZ University (2012 - 2016)
+      </li>
+      <li><b>Certified Web Developer</b> - Online Academy (2017)</li>
+    </ul>
+
+    <hr />
+
+    <h2 id="skills">🛠 Skills</h2>
+    <ul>
+      <li>HTML, JavaScript, PHP</li>
+      <li>UI/UX Design, Figma, Adobe XD</li>
+      <li>Responsive Web Development</li>
+    </ul>
+
+    <hr />
+
+    <h2 id="projects">🚀 Projects</h2>
+    <ul>
+      <li>
+        <a href="https://example.com" target="_blank">Portfolio Website</a>
+      </li>
+      <li>
+        <a href="https://example.com" target="_blank">E-commerce Store</a>
+      </li>
+      <li><a href="https://example.com" target="_blank">Blog Platform</a></li>
+    </ul>
+
+    <hr />
+
+    <h2 id="contact">📞 Contact Me</h2>
+    <p>Feel free to reach out via email or phone:</p>
+    <ul>
+      <li>Email: <a href="mailto:johndoe@email.com">johndoe@email.com</a></li>
+      <li>Phone: <a href="tel:+1234567890">+123 456 7890</a></li>
+      <li>
+        LinkedIn:
+        <a href="https://linkedin.com/in/johndoe" target="_blank"
+          >linkedin.com/in/johndoe</a
+        >
+      </li>
+    </ul>
+  </body>
 </html>
 
