--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body bgcolor="#E6E6FA">
     
 
-    <h1 align="center">John Doe</h1>
+    <h1 align="center">Subiksha P</h1>
     <h3 align="center">Web Developer | Designer | Freelancer</h3>
     <p align="center">
       📍 New York, USA | 📧 johndoe@email.com | ☎ +123 456 7890
