--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 align="center">Subiksha P</h1>
     <h3 align="center">Web Developer | Designer | Freelancer</h3>
     <p align="center">
-      📍 New York, USA | 📧 johndoe@email.com | ☎ +123 456 7890
+      📍 Chennai, Tamilnadu | 📧 Subis369@gmail.com | ☎ +123 456 7890
     </p>
     <hr />
 
