--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <meta charset="utf-8" />
     <title>Interactive Resume - HTML Only</title>
   </head>
-  <body bgcolor="#E6E6FA">
-    
-
+  <body bgcolor="#77dd77">
     <h1 align="center">Subiksha P</h1>
-    <h3 align="center">Web Developer | Designer | Freelancer</h3>
+    <h3 align="center">DevOps engineer</h3>
     <p align="center">
       📍 Chennai, Tamilnadu | 📧 Subis369@gmail.com | ☎ +123 456 7890
     </p>
@@ -16,8 +14,8 @@
 
     <h2>📌 About Me</h2>
     <p>
-      Passionate web developer with 5+ years of experience in building dynamic
-      websites and applications. Skilled in HTML, JavaScript, and UI/UX design.
+      Passionate DevOps engineer. Skilled in Codepipline, linuc shell scripting,
+      and DevOps.
     </p>
 
     <h2>📌 Interactive Sections</h2>
@@ -88,4 +86,5 @@
     </ul>
   </body>
 </html>
+
 
